{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 25,
  "lineage": "e337f99f-1129-9b8f-0af5-bd1be777d0e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:413794829114:instance/i-0eefa01281e9c1f95",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-0eefa01281e9c1f95",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d6275475dea5ced",
            "private_dns": "ip-10-0-0-176.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.176",
            "public_dns": "ec2-3-231-222-201.compute-1.amazonaws.com",
            "public_ip": "3.231.222.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d0f0d5d9db4dce56",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09acc18053082a745",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c34e55520ba9f1f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03c951bbe993ea087",
            "arn": "arn:aws:ec2:us-east-1:413794829114:instance/i-046972c21efb5f817",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "nginx_profile",
            "id": "i-046972c21efb5f817",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04cc6fa9dd527c877",
            "private_dns": "ip-10-0-1-208.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.208",
            "public_dns": "ec2-3-82-142-206.compute-1.amazonaws.com",
            "public_ip": "3.82.142.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01c1f292af6c29f72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f85994d57705ebf4",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02c34e55520ba9f1f"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:internet-gateway/igw-0bd497d8a0756db66",
            "id": "igw-0bd497d8a0756db66",
            "owner_id": "413794829114",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "globo-web-app-56707",
                "enabled": true,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:loadbalancer/app/globo-web-alb/bc3db907c538ae80",
            "arn_suffix": "app/globo-web-alb/bc3db907c538ae80",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-1841158103.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:413794829114:loadbalancer/app/globo-web-alb/bc3db907c538ae80",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-094579452d08c8090"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09acc18053082a745"
              },
              {
                "subnet_id": "subnet-0f85994d57705ebf4"
              }
            ],
            "subnets": [
              "subnet-09acc18053082a745",
              "subnet-0f85994d57705ebf4"
            ],
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "vpc_id": "vpc-0e07ea313f3772ee0",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_s3_bucket.web_bucket",
            "aws_s3_bucket_policy.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:listener/app/globo-web-alb/bc3db907c538ae80/1fca7f805376b4a9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:413794829114:listener/app/globo-web-alb/bc3db907c538ae80/1fca7f805376b4a9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:loadbalancer/app/globo-web-alb/bc3db907c538ae80",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_s3_bucket_policy.web_bucket",
            "aws_security_group.alb_sg",
            "aws_subnet.public_subnet1",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_elb_service_account.root",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233",
            "arn_suffix": "targetgroup/nginx-alb-tg/699cf78de2a7c233",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233-20240215045059968300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233",
            "target_id": "i-0eefa01281e9c1f95"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233-20240215045059805600000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:413794829114:targetgroup/nginx-alb-tg/699cf78de2a7c233",
            "target_id": "i-046972c21efb5f817"
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx_profile",
            "aws_iam_role.allow_nginx_s3",
            "aws_iam_role_policy.allow_s3_all",
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_s3_bucket.web_bucket",
            "aws_security_group.nginx_sg",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.amzn2_linux",
            "random_integer.s3"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:route-table/rtb-04175af83ddc35df9",
            "id": "rtb-04175af83ddc35df9",
            "owner_id": "413794829114",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd497d8a0756db66",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d9c600811e8da83",
            "route_table_id": "rtb-04175af83ddc35df9",
            "subnet_id": "subnet-0f85994d57705ebf4"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet2",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d227f0aca85a0de",
            "route_table_id": "rtb-04175af83ddc35df9",
            "subnet_id": "subnet-09acc18053082a745"
          },
          "dependencies": [
            "aws_internet_gateway.app",
            "aws_route_table.app",
            "aws_subnet.public_subnet1",
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:security-group/sg-094579452d08c8090",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-094579452d08c8090",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "413794829114",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:security-group/sg-02c34e55520ba9f1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c34e55520ba9f1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "413794829114",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:subnet/subnet-09acc18053082a745",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09acc18053082a745",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413794829114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:subnet/subnet-0f85994d57705ebf4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f85994d57705ebf4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "413794829114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "vpc_id": "vpc-0e07ea313f3772ee0"
          },
          "dependencies": [
            "aws_vpc.app",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:413794829114:vpc/vpc-0e07ea313f3772ee0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b472d53de228147",
            "default_route_table_id": "rtb-0f277a425c085ec39",
            "default_security_group_id": "sg-0c2f70821de50c29d",
            "dhcp_options_id": "dopt-0b4b2b729870fbb78",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e07ea313f3772ee0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f277a425c085ec39",
            "owner_id": "413794829114",
            "tags": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            },
            "tags_all": {
              "billing_code": "Rhymes101",
              "company": "TekSavvy Solutions",
              "project": "TekSavvy Solutions-Rhymes707"
            }
          }
        }
      ]
    }
  ]
}